✨ Feature: 기능 모두 완성

--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-    "name": "room-app",
-    "version": "1.0.0",
-    "description": "방 참여 및 제품 선택 애플리케이션",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js"
-    },
-    "dependencies": {
-      "express": "^4.18.2",
-      "socket.io": "^4.5.4"
-    }
+  "name": "room-app",
+  "version": "1.0.0",
+  "description": "방 참여 및 영수증 OCR 제품 추가 애플리케이션",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.7",
+    "socket.io": "^4.5.4",
+    "cors": "^2.8.5"
   }
-  
+}
